# TASK-32

./: CLAUDE.md  PLAN.md  SPEC.md  metadata.json
repo/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  run_tests.sh  tailwind.config.js
repo/.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  prompt.txt  static-audit-2026-04-11-copy.md  static-audit-2026-04-11.md  static_audit_2026-04-12.md
repo/backend/: Cargo.toml
repo/backend/src/: error.rs  lib.rs  main.rs  router.rs
repo/backend/src/db/: mod.rs
repo/backend/src/db/migrations/: 0001_create_users.sql  0002_create_login_tracking.sql  0003_create_knowledge.sql  0004_create_question_bank.sql  0005_create_outcomes.sql  0006_create_store.sql  0007_create_analytics.sql  0008_create_audit.sql  0009_create_backup.sql  0010_seed_users.sql  0011_backup_artifact_kind.sql  0012_backup_classification.sql
repo/backend/src/handlers/: analytics.rs  auth.rs  backup.rs  files.rs  knowledge.rs  mod.rs  outcomes.rs  store.rs
repo/backend/src/middleware/: csrf.rs  mod.rs  rate_limit.rs  require_role.rs  security_headers.rs  session.rs
repo/backend/src/models/: analytics.rs  audit.rs  backup.rs  knowledge.rs  mod.rs  outcome.rs  store.rs  user.rs
repo/backend/src/security/: csrf.rs  encryption.rs  mod.rs  password.rs
repo/backend/src/services/: abuse.rs  analytics_service.rs  audit_service.rs  auth_service.rs  backup_scheduler.rs  backup_service.rs  file_service.rs  knowledge_service.rs  mod.rs  outcome_service.rs  question_service.rs  store_service.rs
repo/backend/tests/api_tests/: analytics_api.rs  auth_api.rs  backup_api.rs  common.rs  knowledge_api.rs  mod.rs  outcome_api.rs  store_api.rs
repo/backend/tests/unit_tests/: analytics_tests.rs  auth_tests.rs  backup_tests.rs  file_tests.rs  knowledge_tests.rs  mod.rs  outcome_tests.rs  store_tests.rs
repo/frontend/: Cargo.toml
repo/frontend/src/: app.rs  lib.rs  main.rs
repo/frontend/src/api/: analytics.rs  auth.rs  backup.rs  client.rs  knowledge.rs  mod.rs  outcomes.rs  store.rs
repo/frontend/src/components/: mod.rs
repo/frontend/src/components/charts/: mod.rs
repo/frontend/src/components/layout/: mod.rs
repo/frontend/src/components/ui/: mod.rs
repo/frontend/src/logic/: filter.rs  mask.rs  mod.rs  promotion.rs  validation.rs
repo/frontend/src/pages/: dashboard.rs  login.rs  mod.rs
repo/frontend/src/pages/admin/: audit.rs  backup.rs  mod.rs  users.rs
repo/frontend/src/pages/analytics/: dashboard.rs  mod.rs  reports.rs
repo/frontend/src/pages/audit/: mod.rs
repo/frontend/tests/api_tests/: auth_client_tests.rs  knowledge_client_tests.rs  mod.rs  outcome_client_tests.rs  store_client_tests.rs
repo/frontend/tests/e2e/: analytics.spec.ts  auth.spec.ts  dashboard.spec.ts  knowledge.spec.ts  outcomes.spec.ts  store.spec.ts
repo/frontend/tests/unit_tests/: filter_tests.rs  mask_tests.rs  mod.rs  promotion_tests.rs  validation_tests.rs
repo/shared/: Cargo.toml
repo/shared/src/: lib.rs
repo/style/: main.scss
repo/test-results/.playwright-artifacts-3/traces/: 634c82c6846b68aa8d60-a5778e9820c4c9d582c2-retry1.trace
repo/test-results/analytics-Analytics-CSV-ex-d7032-s-with-correct-content-type-firefox/: error-context.md
repo/test-results/analytics-Analytics-CSV-ex-d7032-s-with-correct-content-type-firefox-retry1/: error-context.md
repo/test-results/analytics-Analytics-churn-rate-API-responds-firefox/: error-context.md
repo/test-results/analytics-Analytics-churn-rate-API-responds-firefox-retry1/: error-context.md
repo/test-results/analytics-Analytics-financ-c485a--navigate-to-analytics-page-firefox/: error-context.md
repo/test-results/analytics-Analytics-financ-c485a--navigate-to-analytics-page-firefox-retry1/: error-context.md
repo/test-results/analytics-Analytics-fund-summary-API-responds-firefox/: error-context.md
repo/test-results/analytics-Analytics-fund-summary-API-responds-firefox-retry1/: error-context.md
repo/test-results/analytics-Analytics-non-fi-92581--is-denied-analytics-access-firefox/: error-context.md
repo/test-results/analytics-Analytics-non-fi-92581--is-denied-analytics-access-firefox-retry1/: error-context.md
(+19 files in other folders)
