[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"

# Backend
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header", "compression-gzip"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
governor = "0.6"
sha2 = "0.10"
hex = "0.4"
infer = "0.15"
strsim = "0.11"
csv = "1"
printpdf = "0.7"
tokio-cron-scheduler = "0.9"
dashmap = "5"
flate2 = "1"
tar = "0.4"
constant_time_eq = "0.3"
http = "1"
mime = "0.3"
rustls-pemfile = "1"
tokio-rustls = "0.24"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Frontend
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlDocument", "FormData", "File", "FileList", "Storage", "Location"] }
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
