[package]
name = "backend"
version.workspace = true
edition.workspace = true

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "scholarvault"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
governor = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
infer = { workspace = true }
strsim = { workspace = true }
csv = { workspace = true }
printpdf = { workspace = true }
tokio-cron-scheduler = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
constant_time_eq = { workspace = true }
http = { workspace = true }
mime = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }

[[test]]
name = "unit_tests"
path = "tests/unit_tests/mod.rs"

[[test]]
name = "api_tests"
path = "tests/api_tests/mod.rs"
